Fix broken CSS in rebase, cleanup SVG and CSS related to vjs componets

--- a/src/components/MediaPlayer/VideoJS/components/styles/VideoJSSectionButtons.scss
+++ b/src/components/MediaPlayer/VideoJS/components/styles/VideoJSSectionButtons.scss
@@ -1,5 +1,1 @@
-.vjs-previous-button,
-.vjs-next-button {
-  cursor: pointer;
-  padding: 1.125em 0;
-}
+
